# qaanaaq_lobes_detection

./: .cursorrules.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  START_HP_TUNING.sh  pyproject.toml
.cursor/commands/: code.md  endday.md  push.md
.cursor/rules/: core.mdc  project-tracking.mdc  python-and-scripts.mdc
configs/: best_hyperparameters.yaml  data_pipeline_paths.yaml  data_preparation_config.yaml  project_metadata.yaml  training_config.yaml  training_config_synthetic_parenthesis.yaml  training_config_synthetic_parenthesis_unet.yaml
configs/experiments/: README.md  exp_00_all_tiles.yaml  exp_00_baseline.yaml  exp_01_augmentation.yaml  exp_01_baseline.yaml  (+7 more)
docs/: OPTUNA_QUICK_START.md  PROJECT_STRUCTURE.md  baseline_preparation_guide.md  cnn_training_plan.md  code_review_cleanup_plan.md  code_review_summary_2026-01-26.md  focal_loss_explained.md  gpu_setup.md  gully_erfnet_multiscale_segmentation.md  implemented_features_list.md  improvements_backlog.md  loss_functions.md  mlflow_integration.md  model_architecture.md  no_learning_improvement_causes.md  overfitting_analysis.md  overfitting_bce.md  per_tile_baseline_analysis.md  plan_stripe_channel_data_preparation.md  plan_synthetic_parenthesis_and_multiscale.md  project_features.md  proximity_zone_expansion_analysis.md  refactoring_log.md  resampling_guide.md  run_3c5caa5b_analysis.md  synthetic_parenthesis_dataset.md  tile_filtering_guide.md  training_how_it_works.md  training_plateau_analysis.md  training_recommendations.md  training_slowdown_on_new_best.md  training_visualization.md  workflow_512_tiles.md
pipelines/: README.md  run_dev_pipeline.sh  run_full_pipeline.sh  run_production_pipeline.sh  run_synthetic_from_raster_pipeline.sh  run_synthetic_parenthesis_pipeline.sh
scripts/: add_boundary_to_registry.py  add_illumination_tags.py  analyze_iou_baseline.py  analyze_per_tile_performance.py  check_segmentation_tiles.py  check_slope_stripes_tiles.py  check_tile_content.py  classify_tiles_by_shadow_mask.py  compare_experiments.py  compare_runs.py  compute_baseline_metrics.py  create_derived_layer.py  create_segmentation_for_synthetic_parenthesis.py  create_segmentation_layer.py  create_slope_stripes_channel.py  create_tile_registry.py  create_tiles.py  create_vrt_stack.py  crop_raster.py  elapsed_time.py  extract_imagery_boundaries.py  filter_tiles.py  filter_tiles_by_boundary.py  generate_proximity_map.py  generate_synthetic_parenthesis_dataset.py  generate_synthetic_parenthesis_from_raster.py  generate_synthetic_parenthesis_shapefile.py  generate_tile_index_shapefile.py  plot_loss_from_mlflow_run.py  prepare_extended_training_set.py  prepare_training_data.py  rasterize_vector.py  recalculate_baselines.py  regenerate_loss_plots_for_runs.py  resample_raster.py  resume_from_saved.py  run_experiment_sequence.py  run_gabor_slope_stripes_parameter_sweep.py  run_slope_stripes_parameter_sweep.py  run_slope_stripes_rot90_sanity.py  (+9 more)
(+107 files in other folders)
