[tool.poetry]
name = "qaanaaq-lobes-detection"
version = "0.1.0"
description = "CNN pipeline for lobes detection using raster and vector geospatial data"
authors = ["Qaanaaq Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.14.0"
rasterio = "^1.3.9"
numpy = "^1.24.0"
scipy = "^1.11.0"
scikit-image = "^0.22.0"
pyyaml = "^6.0"
gdal = "^3.8.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
mlflow = "^2.8.0"
pillow = "^10.0.0"
matplotlib = "^3.8.0"
tqdm = "^4.66.0"
# Note: satlaspretrain-models is an optional dependency
# Install manually with: pip install satlaspretrain-models
# Not included in pyproject.toml to avoid torch version conflicts

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.0.0"
ruff = "^0.4.0"
# Note: optuna is installed manually with: poetry run pip install optuna
# Not included in pyproject.toml to avoid torch version conflicts

[tool.poetry.group.notify.dependencies]
gtts = "^2.5.0"
pygame = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = []

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests (data prep / tuning / training). Require dev data; run with pytest -m e2e.",
]
